--- a/app/styles/stylesheet.scss
+++ b/app/styles/stylesheet.scss
@@ -17,6 +17,7 @@ html {
                 align-items: center;
 
                 img.refresh {
+                    cursor: pointer;
                     margin-top: 20px;
                     width: 3rem;
                 }
